refactor : controller, facade 코드 정리